Add comment for left and right display

--- a/ST7735/MMDVM.ini
+++ b/ST7735/MMDVM.ini
@@ -103,6 +103,9 @@ Port=/dev/ttyAMA0
 Brightness=50
 
 [ST7735]
-DisplayNum=1
+# Left Display
+# DisplayNum=1
+# Right Display
+DisplayNum=0
 BitmapPath=TFTSerial
 
