--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -1,60 +1,82 @@
 [General]
-Callsign=W1AW
-Timeout=180
-Duplex=1
-ModeHang=10
-Display=None
-# Display=Nextion
-# Display=HD44780
-# Display=ST7735
+Callsign=G9BF			# Your CallSign
+Timeout=180			# Transmitter timeout in seconds
+Duplex=1			# Is this station Simples or Duplex. DVMega is simples
+# ModeHang=10
+RFModeHang=10
+NetModeHang=3
+Display=None			# Stanza used for external display
+Daemon=0			# Run in background
 
 [Info]
-RXFrequency=437700000
-TXFrequency=432700000
-Power=99 				# Power>99 Seems to set CC=0 on BM DashBoard
-Latitude=27.00
-Longitude=-80.00
-Height=100
-Location=Anytown, Florida
+RXFrequency=435000000		# Receiver frequency in Hz Used by DVMega
+TXFrequency=435000000		# Transmitter frequency in Hz. Used by DVMega
+Power=1
+Latitude=0.0
+Longitude=0.0
+Height=0
+Location=Nowhere
 Description=Multi-Mode Repeater
-URL=www.qsl.net/w1aw
+URL=www.google.co.uk
 
 [Log]
 # Logging levels, 0=No logging
-DisplayLevel=1
-FileLevel=1
-FilePath=/var/log/mmdvm/
+DisplayLevel=1			# Display log to console 
+FileLevel=1			# log to file
+FilePath=.			# Where is the log file 
 FileRoot=MMDVM
 
+[CW Id]
+Enable=1			# Enable the CD Id
+Time=10				# How often to ID in minutes
+
 [Modem]
-Port=/dev/ttyACM0
-TXInvert=0
+# Port=/dev/ttyACM0		# Port where the MMDVM or DVMega is connected
+Port=\\.\COM3
+TXInvert=1
 RXInvert=0
 PTTInvert=0
-TXDelay=50
-TXLevel=65
-RXLevel=90				# A low RX level in MMDVM.ini brings low ADC overflow point regardless of the pot setting, so keep it high.
+TXDelay=100
 DMRDelay=0
+RXLevel=50			# Soft control for receive level
+TXLevel=50			# Soft Control for transmit level
+DStarLevel=0
+DMRLevel1=0
+DMRLevel3=0
+YSFLevel1=0
+YSFLevel3=0
+DMRThreshold=0
+YSFThreshold=0
 OscOffset=0
 Debug=0
 
 [D-Star]
-Enable=0
+Enable=1			# Enable D-Star mode
 Module=C
+SelfOnly=0
 
 [DMR]
-Enable=1
+Enable=1			# Enable DMR
 Beacons=1
-Id=300000
+Id=123456			# DMR ID of this station
 ColorCode=1
+SelfOnly=0
+# Prefixes=234,235
 LookupFile=DMRIds.dat
+CallHang=3
+TXHang=4
+#Blacklist=
+#DstIdBlackListSlot1=
+#DstIdBlackListSlot2=
+#DstIdWhiteListSlot1=
+#DstIdWhiteListSlot2=
+
 
 [System Fusion]
-Enable=0
-Parrot=1
+Enable=1
 
 [D-Star Network]
-Enable=0
+Enable=1
 GatewayAddress=127.0.0.1
 GatewayPort=20010
 LocalPort=20011
@@ -62,38 +84,20 @@ Debug=0
 
 [DMR Network]
 Enable=1
+Address=44.131.4.1
+Port=62031
+# Local=3350
+Password=PASSWORD
 Slot1=1
 Slot2=1
 Debug=0
 
-# Loopback
-# Address=127.0.0.1
-
-# Adrian
-# Address=44.136.151.11
-
-# OpenQuad 3101
-# Address=168.235.68.21
-
-# Rudy
-# Address=44.137.41.178
-
-# Dallas 3102
-# Address=74.91.114.19
-
-# bm.ham-dmr.org 3103
-# Address=74.91.118.251
-
-# bmdev.dmrx.net 3108
-Address=74.91.126.73
-
-Port=62031
-Password=passw0rd
-
 [System Fusion Network]
-Enable=0
-Address=44.131.4.1
-Port=32768
+Enable=1
+LocalAddress=127.0.0.1
+LocalPort=3200
+GwyAddress=c4fm.duckdns.org
+GwyPort=4200
 Debug=0
 
 [TFT Serial]
@@ -104,12 +108,27 @@ Brightness=50
 Rows=2
 Columns=16
 # rs, strb, d0, d1, d2, d3
-# HD44780
-# Pins=11,10,0,1,2,3
-# Adafruit 
-Pins=115,113,112,111,110,109
+# For basic HD44780 displays
+Pins=11,10,0,1,2,3
+# For Adafruit i2c HD44780
+# Pins=115,113,112,111,110,109
+
+# PWM backlight
+PWM=0
+PWMPin=21
+PWMBright=100
+PWMDim=16
+DisplayClock=1
+UTC=0
 
 [Nextion]
 Port=/dev/ttyAMA0
-Brightness= 50
+Brightness=50
+DisplayClock=1
+UTC=0
+IdleBrightness=20
 
+[OLED]
+Type=3
+Brightness=0
+Invert=0
