Added some further descriptions

--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -2,29 +2,29 @@
 Callsign=G9BF			# Your CallSign
 Timeout=180			# Transmitter timeout in seconds
 Duplex=1			# Is this station Simples or Duplex. DVMega is simples
-# ModeHang=10
-RFModeHang=10
-NetModeHang=3
+# ModeHang=10     # Time to stay in mode after receiption
+RFModeHang=10     # Time to stay in mode after RF-receiption
+NetModeHang=3     # Time to stay in mode after Network-receiption
 Display=None			# Stanza used for external display
 Daemon=0			# Run in background
 
 [Info]
-RXFrequency=435000000		# Receiver frequency in Hz Used by DVMega
-TXFrequency=435000000		# Transmitter frequency in Hz. Used by DVMega
-Power=1
-Latitude=0.0
-Longitude=0.0
-Height=0
-Location=Nowhere
-Description=Multi-Mode Repeater
-URL=www.google.co.uk
+RXFrequency=435000000		# Receiver frequency in Hz Used by DVMega, reported to DMR-Master
+TXFrequency=435000000		# Transmitter frequency in Hz. Used by DVMega, reported to DMR-Master
+Power=1     # For informational use only
+Latitude=0.0    # if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
+Longitude=0.0    # if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
+Height=0    # if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
+Location=Nowhere    # For informational use only
+Description=Multi-Mode Repeater   # For informational use only
+URL=www.google.co.uk    # For informational use only
 
 [Log]
 # Logging levels, 0=No logging
 DisplayLevel=1			# Display log to console 
 FileLevel=1			# log to file
 FilePath=.			# Where is the log file 
-FileRoot=MMDVM
+FileRoot=MMDVM    # Prefix of log file
 
 [CW Id]
 Enable=1			# Enable the CD Id
@@ -57,14 +57,14 @@ SelfOnly=0
 
 [DMR]
 Enable=1			# Enable DMR
-Beacons=1
+Beacons=1     # Enable transmission of DMR-Beacons, used for DMR-Roaming, prohibits sending CWid
 Id=123456			# DMR ID of this station
-ColorCode=1
-SelfOnly=0
-# Prefixes=234,235
-LookupFile=DMRIds.dat
-CallHang=3
-TXHang=4
+ColorCode=1   # used Color-Code
+SelfOnly=0    # If set, only own ID could operate
+# Prefixes=234,235    # This prefixes are whitelisted for operation
+LookupFile=DMRIds.dat   # Filename of the DMRID-Database
+CallHang=3    # Time to answer in same TG
+TXHang=4      # Time that TX stays on transmission after DMR-over
 #Blacklist=
 #DstIdBlackListSlot1=
 #DstIdBlackListSlot2=
