--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -1,34 +1,38 @@
 [General]
 Callsign=G9BF			# Your CallSign
 Timeout=180			# Transmitter timeout in seconds
-Duplex=1			# Is this station Simples or Duplex. DVMega is simples
-# ModeHang=10     # Time to stay in mode after receiption
-RFModeHang=10     # Time to stay in mode after RF-receiption
-NetModeHang=3     # Time to stay in mode after Network-receiption
+Duplex=1			# Is this station Simples or Duplex. DVMega is simplex
+# ModeHang=10     		# Time to stay in mode after receiption
+RFModeHang=10     		# Time to stay in mode after RF-receiption
+NetModeHang=3     		# Time to stay in mode after Network-receiption
 Display=None			# Stanza used for external display
 Daemon=0			# Run in background
+
 
 [Info]
 RXFrequency=435000000		# Receiver frequency in Hz Used by DVMega, reported to DMR-Master
 TXFrequency=435000000		# Transmitter frequency in Hz. Used by DVMega, reported to DMR-Master
-Power=1     # For informational use only
-Latitude=0.0    # if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
-Longitude=0.0    # if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
-Height=0    # if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
-Location=Nowhere    # For informational use only
-Description=Multi-Mode Repeater   # For informational use only
-URL=www.google.co.uk    # For informational use only
+Power=1     			# For informational use only. Keep below 99 for BrandMeister
+Latitude=0.0    		# if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
+Longitude=0.0    		# if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
+Height=0    			# if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
+Location=Nowhere    		# For informational use only
+Description=Multi-Mode Repeater # For informational use only
+URL=www.google.co.uk    	# For informational use only
+
 
 [Log]
 # Logging levels, 0=No logging
 DisplayLevel=1			# Display log to console 
 FileLevel=1			# log to file
 FilePath=.			# Where is the log file 
-FileRoot=MMDVM    # Prefix of log file
+FileRoot=MMDVM    		# Prefix of log file
+
 
 [CW Id]
 Enable=1			# Enable the CD Id
 Time=10				# How often to ID in minutes
+
 
 [Modem]
 # Port=/dev/ttyACM0		# Port where the MMDVM or DVMega is connected
@@ -38,8 +42,8 @@ RXInvert=0
 PTTInvert=0
 TXDelay=100
 DMRDelay=0
-RXLevel=50			# Soft control for receive level
-TXLevel=50			# Soft Control for transmit level
+RXLevel=50			# Soft control for receive level. Not used by DVMega
+TXLevel=50			# Soft Control for transmit level. Not used by DVMega 
 DStarLevel=0
 DMRLevel1=0
 DMRLevel3=0
@@ -50,21 +54,23 @@ YSFThreshold=0
 OscOffset=0
 Debug=0
 
+
 [D-Star]
 Enable=1			# Enable D-Star mode
 Module=C
 SelfOnly=0
 
+
 [DMR]
 Enable=1			# Enable DMR
-Beacons=1     # Enable transmission of DMR-Beacons, used for DMR-Roaming, prohibits sending CWid
+Beacons=1     			# Enable transmission of DMR-Beacons, used for DMR-Roaming, prohibits sending CWid
 Id=123456			# DMR ID of this station
-ColorCode=1   # used Color-Code
-SelfOnly=0    # If set, only own ID could operate
-# Prefixes=234,235    # This prefixes are whitelisted for operation
-LookupFile=DMRIds.dat   # Filename of the DMRID-Database
-CallHang=3    # Time to answer in same TG
-TXHang=4      # Time that TX stays on transmission after DMR-over
+ColorCode=1   			# used Color-Code
+SelfOnly=0    			# If set, only own ID could operate
+# Prefixes=234,235    		# This prefixes are whitelisted for operation
+LookupFile=DMRIds.dat   	# Filename of the DMRID-Database
+CallHang=3    			# Time to answer in same TG
+TXHang=4      			# Time that TX stays on transmission after DMR-over
 #Blacklist=
 #DstIdBlackListSlot1=
 #DstIdBlackListSlot2=
@@ -75,12 +81,14 @@ TXHang=4      # Time that TX stays on transmission after DMR-over
 [System Fusion]
 Enable=1
 
+
 [D-Star Network]
 Enable=1
 GatewayAddress=127.0.0.1
 GatewayPort=20010
 LocalPort=20011
 Debug=0
+
 
 [DMR Network]
 Enable=1
@@ -92,17 +100,26 @@ Slot1=1
 Slot2=1
 Debug=0
 
+
 [System Fusion Network]
 Enable=1
-LocalAddress=127.0.0.1
-LocalPort=3200
-GwyAddress=c4fm.duckdns.org
-GwyPort=4200
 Debug=0
+
+# Use local YSFGateway
+# LocalPort=3200
+# GwyAddress=127.0.0.1
+# GwyPort=4200
+
+# Use Direct connection to Reflector 
+LocalPort=/dev/null
+GwyAddress=ysfreflector.dvswitch.org
+GwyPort=42000
+
 
 [TFT Serial]
 Port=/dev/ttyAMA0
 Brightness=50
+
 
 [HD44780]
 Rows=2
@@ -121,12 +138,14 @@ PWMDim=16
 DisplayClock=1
 UTC=0
 
+
 [Nextion]
 Port=/dev/ttyAMA0
 Brightness=50
 DisplayClock=1
 UTC=0
 IdleBrightness=20
+
 
 [OLED]
 Type=3
