--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -2,7 +2,7 @@
 Callsign=G9BF			# Your CallSign
 Timeout=180			# Transmitter timeout in seconds
 Duplex=1			# Is this station Simples or Duplex. DVMega is simplex
-# ModeHang=10     		# Time to stay in mode after receiption
+# ModeHang=10     		# Time to stay in mode after receiption. If set overrides RFModemHang and NetModemHang
 RFModeHang=10     		# Time to stay in mode after RF-receiption
 NetModeHang=3     		# Time to stay in mode after Network-receiption
 Display=None			# Stanza used for external display
@@ -35,8 +35,8 @@ Time=10				# How often to ID in minutes
 
 
 [Modem]
-# Port=/dev/ttyACM0		# Port where the MMDVM or DVMega is connected
-Port=\\.\COM3
+Port=/dev/ttyACM0		# Port where the MMDVM or DVMega is connected
+# Port=\\.\COM3
 TXInvert=1
 RXInvert=0
 PTTInvert=0
@@ -44,32 +44,25 @@ TXDelay=100
 DMRDelay=0
 RXLevel=50			# Soft control for receive level. Not used by DVMega
 TXLevel=50			# Soft Control for transmit level. Not used by DVMega 
-DStarLevel=0
-DMRLevel1=0
-DMRLevel3=0
-YSFLevel1=0
-YSFLevel3=0
-DMRThreshold=0
-YSFThreshold=0
 OscOffset=0
 Debug=0
 
 
 [D-Star]
-Enable=1			# Enable D-Star mode
+Enable=1			# Enable D-Star repeater mode
 Module=C
 SelfOnly=0
 
 
 [DMR]
-Enable=1			# Enable DMR
+Enable=1			# Enable DMR repeater mode
 Beacons=1     			# Enable transmission of DMR-Beacons, used for DMR-Roaming, prohibits sending CWid
 Id=123456			# DMR ID of this station
-ColorCode=1   			# used Color-Code
-SelfOnly=0    			# If set, only own ID could operate
+ColorCode=1   			# Color Code to use for DMR repeater access
+SelfOnly=0    			# If set, only own ID can operate
 # Prefixes=234,235    		# This prefixes are whitelisted for operation
 LookupFile=DMRIds.dat   	# Filename of the DMRID-Database
-CallHang=3    			# Time to answer in same TG
+CallHang=3    			# Time to answer in same Talk Group
 TXHang=4      			# Time that TX stays on transmission after DMR-over
 #Blacklist=
 #DstIdBlackListSlot1=
@@ -79,11 +72,11 @@ TXHang=4      			# Time that TX stays on transmission after DMR-over
 
 
 [System Fusion]
-Enable=1
+Enable=1			# Enable Fusion repeater mode
 
 
 [D-Star Network]
-Enable=1
+Enable=1			# Enable D-Star network connection. Requires ircDDBGateway
 GatewayAddress=127.0.0.1
 GatewayPort=20010
 LocalPort=20011
@@ -91,7 +84,7 @@ Debug=0
 
 
 [DMR Network]
-Enable=1
+Enable=1			# Enable DMR network connection
 Address=44.131.4.1
 Port=62031
 # Local=3350
@@ -102,7 +95,7 @@ Debug=0
 
 
 [System Fusion Network]
-Enable=1
+Enable=1			# Enable Fusion network connection
 Debug=0
 
 # Use local YSFGateway
