--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -60,7 +60,7 @@ Beacons=1     			# Enable transmission of DMR-Beacons, used for DMR-Roaming, pro
 Id=123456			# DMR ID of this station
 ColorCode=1   			# Color Code to use for DMR repeater access
 SelfOnly=0    			# If set, only own ID can operate
-# Prefixes=234,235    		# This prefixes are whitelisted for operation
+# Prefixes=234,235    		# These prefixes are whitelisted for operation
 LookupFile=DMRIds.dat   	# Filename of the DMRID-Database
 CallHang=3    			# Time to answer in same Talk Group
 TXHang=4      			# Time that TX stays on transmission after DMR-over
@@ -87,7 +87,7 @@ Debug=0
 Enable=1			# Enable DMR network connection
 Address=44.131.4.1
 Port=62031
-# Local=3350
+# Local=3350			# Local port if needed else random
 Password=PASSWORD
 Slot1=1
 Slot2=1
