--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -18,7 +18,7 @@ Longitude=0.0    		# if set, reported to DMR-Master, causes recognition as repea
 Height=0    			# if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
 Location=Nowhere    		# For informational use only
 Description=Multi-Mode Repeater # For informational use only
-URL=www.google.co.uk    	# For informational use only
+URL=mmdvm.com		    	# For informational use only
 
 
 [Log]
@@ -36,12 +36,12 @@ Time=10				# How often to ID in minutes
 
 [Modem]
 Port=/dev/ttyACM0		# Port where the MMDVM or DVMega is connected
-# Port=\\.\COM3
+# Port=\\.\COM3			# Syntax for Windows port
 TXInvert=1
 RXInvert=0
 PTTInvert=0
-TXDelay=100
-DMRDelay=0
+TXDelay=100			# Give the transmitter time to settle in ms
+DMRDelay=0			# Compensate for delay in transmitter audio chain in ms . Usually DSP based
 RXLevel=50			# Soft control for receive level. Not used by DVMega
 TXLevel=50			# Soft Control for transmit level. Not used by DVMega 
 OscOffset=0
