--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -1,7 +1,7 @@
 [General]
-Callsign=G9BF			# Your CallSign
+Callsign=G9BF			# Repeater CallSign
 Timeout=180			# Transmitter timeout in seconds
-Duplex=1			# Is this station Simples or Duplex. DVMega is simplex
+Duplex=1			# Is this station Simplex or Duplex. DVMega is simplex
 # ModeHang=10     		# Time to stay in mode after receiption. If set overrides RFModemHang and NetModemHang
 RFModeHang=10     		# Time to stay in mode after RF-receiption
 NetModeHang=3     		# Time to stay in mode after Network-receiption
@@ -30,16 +30,16 @@ FileRoot=MMDVM    		# Prefix of log file
 
 
 [CW Id]
-Enable=1			# Enable the CD Id
+Enable=1			# Enable the CW Id
 Time=10				# How often to ID in minutes
 
 
 [Modem]
 Port=/dev/ttyACM0		# Port where the MMDVM or DVMega is connected
-# Port=\\.\COM3			# Syntax for Windows port
-TXInvert=1
-RXInvert=0
-PTTInvert=0
+# Port=\\.\COM3			# Syntax for Windows com port
+TXInvert=1			# Invert TX data. Needed for some transmitters
+RXInvert=0			# Invert RX data. Needed for some receivers
+PTTInvert=0			# PTT goes low to transmit. Invert for some transmitters
 TXDelay=100			# Give the transmitter time to settle in ms
 DMRDelay=0			# Compensate for delay in transmitter audio chain in ms . Usually DSP based
 RXLevel=50			# Soft control for receive level. Not used by DVMega
@@ -50,8 +50,8 @@ Debug=0
 
 [D-Star]
 Enable=1			# Enable D-Star repeater mode
-Module=C
-SelfOnly=0
+Module=C			# Inital RF module
+SelfOnly=0			# If set, only own ID can operate
 
 
 [DMR]
@@ -77,20 +77,20 @@ Enable=1			# Enable Fusion repeater mode
 
 [D-Star Network]
 Enable=1			# Enable D-Star network connection. Requires ircDDBGateway
-GatewayAddress=127.0.0.1
-GatewayPort=20010
+GatewayAddress=127.0.0.1	# IP address of ircDDBGateway
+GatewayPort=20010		# Port ircDDBGateway is listening on
 LocalPort=20011
 Debug=0
 
 
 [DMR Network]
 Enable=1			# Enable DMR network connection
-Address=44.131.4.1
-Port=62031
+Address=44.131.4.1		# IP Address DMR Master
+Port=62031			# Port DMRMaster is listening on
 # Local=3350			# Local port if needed else random
-Password=PASSWORD
-Slot1=1
-Slot2=1
+Password=PASSWORD		# Access password of DMR Master	
+Slot1=1				# Enable Slot 1 Do not enable for DVMega
+Slot2=1				# Enable Slot 2
 Debug=0
 
 
