--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -61,7 +61,7 @@ Id=123456			# DMR ID of this station
 ColorCode=1   			# Color Code to use for DMR repeater access
 SelfOnly=0    			# If set, only own ID can operate
 # Prefixes=234,235    		# These prefixes are whitelisted for operation
-LookupFile=DMRIds.dat   	# Filename of the DMRID-Database
+LookupFile=/path/to/DMRIds.dat  # Filename of the DMRID-Database. Use full path to file
 CallHang=3    			# Time to answer in same Talk Group
 TXHang=4      			# Time that TX stays on transmission after DMR-over
 #Blacklist=
