--- a/mmdvm.service
+++ b/mmdvm.service
@@ -1,14 +1,15 @@
 [Unit]
 Description=MMDVMHost Service
 # Description=Place this file in /lib/systemd/system
-# Description=N4IRS 3/38/2016 
+# Description=N4IRS 7/10/2016 
 
 [Service]
 Type=simple
+StandardOutput=null
+WorkingDirectory=/opt/MMDVMHost
 Restart=always
 RestartSec=3
-EnvironmentFile=/etc/default/mmdvm
-ExecStart=/opt/MMDVMHost/MMDVMHost $MMDVM_OPTS
+ExecStart=/opt/MMDVMHost/MMDVMHost /opt/MMDVMHost/MMDVM.ini
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=process
 
