Add scripts to build MMDVMHost from source

--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -78,8 +78,8 @@ Enable=1			# Enable Fusion repeater mode
 [D-Star Network]
 Enable=1			# Enable D-Star network connection. Requires ircDDBGateway
 GatewayAddress=127.0.0.1	# IP address of ircDDBGateway
-GatewayPort=20010		# Port ircDDBGateway is listening on
-LocalPort=20011
+GatewayPort=20010		# UDP port ircDDBGateway is listening on
+LocalPort=20011			# UDP port MMDVMHost is listening on
 Debug=0
 
 
@@ -87,7 +87,7 @@ Debug=0
 Enable=1			# Enable DMR network connection
 Address=44.131.4.1		# IP Address DMR Master
 Port=62031			# Port DMRMaster is listening on
-# Local=3350			# Local port if needed else random
+# Local=3350			# Local UDP port if needed else random
 Password=PASSWORD		# Access password of DMR Master	
 Slot1=1				# Enable Slot 1 Do not enable for DVMega
 Slot2=1				# Enable Slot 2
