Turn off DMR beacon

--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -56,7 +56,7 @@ SelfOnly=0			# If set, only own ID can operate
 
 [DMR]
 Enable=1			# Enable DMR repeater mode
-Beacons=1     			# Enable transmission of DMR-Beacons, used for DMR-Roaming, prohibits sending CWid
+Beacons=0     			# Enable transmission of DMR-Beacons, used for DMR-Roaming, prohibits sending CW ID
 Id=123456			# DMR ID of this station
 ColorCode=1   			# Color Code to use for DMR repeater access
 SelfOnly=0    			# If set, only own ID can operate
