Add support separate network/rf access control

--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -65,10 +65,14 @@ LookupFile=/path/to/DMRIds.dat  # Filename of the DMRID-Database. Use full path 
 CallHang=3    			# Time to answer in same Talk Group
 TXHang=4      			# Time that TX stays on transmission after DMR-over
 #Blacklist=
-#DstIdBlackListSlot1=
-#DstIdBlackListSlot2=
-#DstIdWhiteListSlot1=
-#DstIdWhiteListSlot2=
+#DstIdBlackListSlot1RF=
+#DstIdBlackListSlot2RF=
+#DstIdWhiteListSlot1RF=
+#DstIdWhiteListSlot2RF=
+#DstIdBlackListSlot1NET=
+#DstIdBlackListSlot2NET=
+#DstIdWhiteListSlot1NET=
+#DstIdWhiteListSlot2NET=
 
 
 [System Fusion]
