Add support separate network/rf access control

--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -65,14 +65,14 @@ LookupFile=/path/to/DMRIds.dat  # Filename of the DMRID-Database. Use full path 
 CallHang=3    			# Time to answer in same Talk Group
 TXHang=4      			# Time that TX stays on transmission after DMR-over
 #Blacklist=
-#DstIdBlackListSlot1RF=
-#DstIdBlackListSlot2RF=
-#DstIdWhiteListSlot1RF=
-#DstIdWhiteListSlot2RF=
-#DstIdBlackListSlot1NET=
-#DstIdBlackListSlot2NET=
-#DstIdWhiteListSlot1NET=
-#DstIdWhiteListSlot2NET=
+#DstIdBlackListSlot1RF=		# comma separated list TGs to block on RF Slot1
+#DstIdBlackListSlot2RF=		# comma separated list TGs to block on RF Slot2
+#DstIdWhiteListSlot1RF=		# comma separated list TGs to allow on RF Slot1 
+#DstIdWhiteListSlot2RF=		# comma separated list TGs to allow on RF Slot2
+#DstIdBlackListSlot1NET=	# comma separated list TGs to block on NET Slot1
+#DstIdBlackListSlot2NET=	# comma separated list TGs to block on NET Slot2
+#DstIdWhiteListSlot1NET=	# comma separated list TGs to allow on NET Slot1 
+#DstIdWhiteListSlot2NET=	# comma separated list TGs to allow on NET Slot2
 
 
 [System Fusion]
