Add default values. Removed comments causing crashes

--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -1,33 +1,32 @@
 [General]
-Callsign=G9BF			# Repeater CallSign
-Timeout=180			# Transmitter timeout in seconds
-Duplex=1			# Is this station Simplex or Duplex. DVMega is simplex
+Callsign=G9BF
+Timeout=180			# Transmitter timeout in seconds. Default is: 120s
+Duplex=1			# Is this station Simplex or Duplex. DVMega is simplex. Default is: 1
 # ModeHang=10     		# Time to stay in mode after receiption. If set overrides RFModemHang and NetModemHang
-RFModeHang=10     		# Time to stay in mode after RF-receiption
-NetModeHang=3     		# Time to stay in mode after Network-receiption
-Display=None			# Stanza used for external display
+RFModeHang=10     		# Time to stay in mode after RF-receiption Default is: 10s
+NetModeHang=3     		# Time to stay in mode after Network-receiption Default is: 3s
+Display=None			
 Daemon=0			# Run in background
 
 
 [Info]
-RXFrequency=435000000		# Receiver frequency in Hz Used by DVMega, reported to DMR-Master
-TXFrequency=435000000		# Transmitter frequency in Hz. Used by DVMega, reported to DMR-Master
+RXFrequency=435000000		# Receiver frequency in Hz Used by DVMega, reported to DMR-Master. Default is: 0Hz
+TXFrequency=435000000		# Transmitter frequency in Hz. Used by DVMega, reported to DMR-Master. Default is: 0Hz
 Power=1     			# For informational use only. Keep below 99 for BrandMeister
 Latitude=0.0    		# if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
 Longitude=0.0    		# if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
 Height=0    			# if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
-Location=Nowhere    		# For informational use only
-Description=Multi-Mode Repeater # For informational use only
-URL=mmdvm.com		    	# For informational use only
+Location=Nowhere		
+Description=Multi-Mode Repeater 
+URL=mmdvm.com			
 
 
 [Log]
 # Logging levels, 0=No logging
-DisplayLevel=1			# Display log to console 
-FileLevel=1			# log to file
-FilePath=.			# Where is the log file 
-FileRoot=MMDVM    		# Prefix of log file
-
+DisplayLevel=1			# log to console. Default is: 0 
+FileLevel=1			# log to file. Default is: 0
+FilePath=.
+FileRoot=MMDVM
 
 [CW Id]
 Enable=1			# Enable the CW Id
@@ -35,35 +34,35 @@ Time=10				# How often to ID in minutes
 
 
 [Modem]
-Port=/dev/ttyACM0		# Port where the MMDVM or DVMega is connected
-# Port=\\.\COM3			# Syntax for Windows com port
-TXInvert=1			# Invert TX data. Needed for some transmitters
-RXInvert=0			# Invert RX data. Needed for some receivers
-PTTInvert=0			# PTT goes low to transmit. Invert for some transmitters
-TXDelay=100			# Give the transmitter time to settle in ms
-DMRDelay=0			# Compensate for delay in transmitter audio chain in ms . Usually DSP based
-RXLevel=50			# Soft control for receive level. Not used by DVMega
-TXLevel=50			# Soft Control for transmit level. Not used by DVMega 
-OscOffset=0
+Port=/dev/ttyACM0
+# Port=\\.\COM3
+TXInvert=1			# Invert TX data. Needed for some transmitters. Default is: 0
+RXInvert=0			# Invert RX data. Needed for some receivers. Default is: 0
+PTTInvert=0			# PTT goes low to transmit. Invert for some transmitters. Default is: 0
+TXDelay=100			# Give the transmitter time to settle in ms. Default is: 100ms
+DMRDelay=0			# Compensate for delay in transmitter audio chain in ms . Usually DSP based. Default is: 0.0ms
+RXLevel=50			# Soft control for receive level. Not used by DVMega. Default is: 100%
+TXLevel=50			# Soft Control for transmit level. Not used by DVMega. Default is: 100% 
+OscOffset=0			# Tweak the Due oscillator if not using the TCXO. Default is: 0ppm
 Debug=0
 
 
 [D-Star]
-Enable=1			# Enable D-Star repeater mode
-Module=C			# Inital RF module
-SelfOnly=0			# If set, only own ID can operate
+Enable=1			# Enable D-Star repeater mode. Default is: 1
+Module=C
+SelfOnly=0			# If set, only own ID can operate. Default is: 0
 
 
 [DMR]
-Enable=1			# Enable DMR repeater mode
+Enable=1			# Enable DMR repeater mode. Default is: 1
 Beacons=0     			# Enable transmission of DMR-Beacons, used for DMR-Roaming
 Id=123456			# DMR ID of this station
-ColorCode=1   			# Color Code to use for DMR repeater access
-SelfOnly=0    			# If set, only own ID can operate
-# Prefixes=234,235    		# These prefixes are whitelisted for operation
-LookupFile=/path/to/DMRIds.dat  # Filename of the DMRID-Database. Use full path to file
-CallHang=3    			# Time to answer in same Talk Group
-TXHang=4      			# Time that TX stays on transmission after DMR-over
+ColorCode=1   			# Color Code to use for DMR repeater access. Default is: 2
+SelfOnly=0    			# If set, only own ID can operate. Default is: 0
+# Prefixes=234,235    		# These prefixes are whitelisted for operation. Default is: 0
+LookupFile=/path/to/DMRIds.dat
+CallHang=3    			# Time to answer in same Talk Group. Default is: 3
+TXHang=4      			# Time that TX stays on transmission after DMR-over. Default is: 3
 #Blacklist=
 #DstIdBlackListSlot1RF=		# comma separated list TGs to block on RF Slot1
 #DstIdBlackListSlot2RF=		# comma separated list TGs to block on RF Slot2
@@ -76,31 +75,32 @@ TXHang=4      			# Time that TX stays on transmission after DMR-over
 
 
 [System Fusion]
-Enable=1			# Enable Fusion repeater mode
+Enable=1			# Enable Fusion repeater mode. Default is: 1
 
 
 [D-Star Network]
-Enable=1			# Enable D-Star network connection. Requires ircDDBGateway
-GatewayAddress=127.0.0.1	# IP address of ircDDBGateway
-GatewayPort=20010		# UDP port ircDDBGateway is listening on
-LocalPort=20011			# UDP port MMDVMHost is listening on
+Enable=1			# Enable D-Star network connection. Requires ircDDBGateway. Default is: 1
+GatewayAddress=127.0.0.1
+GatewayPort=20010		# UDP port ircDDBGateway is listening on. Default is: 0
+LocalPort=20011			# UDP port MMDVMHost is listening on. Default is: 1
 Debug=0
 
 
 [DMR Network]
-Enable=1			# Enable DMR network connection
-Address=44.131.4.1		# IP Address DMR Master
+Enable=1			# Enable DMR network connection. Default is: 1
+Address=44.131.4.1
 Port=62031			# Port DMRMaster is listening on
 # Local=3350			# Local UDP port if needed else random
 Password=PASSWORD		# Access password of DMR Master	
-Slot1=1				# Enable Slot 1 Do not enable for DVMega
-Slot2=1				# Enable Slot 2
+Slot1=1				# Enable Slot 1 Do not enable for DVMega. Default is: 1
+Slot2=1				# Enable Slot 2. Default is: 1
 Debug=0
 
 
 [System Fusion Network]
 Enable=1			# Enable Fusion network connection
 Debug=0
+LocalAddress=127.0.0.1
 
 # Use local YSFGateway
 # LocalPort=3200
