Remove trailing spaces

--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -5,7 +5,7 @@ Duplex=1			# Is this station Simplex or Duplex. DVMega is simplex. Default is: 1
 # ModeHang=10     		# Time to stay in mode after receiption. If set overrides RFModemHang and NetModemHang
 RFModeHang=10     		# Time to stay in mode after RF-receiption Default is: 10s
 NetModeHang=3     		# Time to stay in mode after Network-receiption Default is: 3s
-Display=None			
+Display=None
 Daemon=0			# Run in background
 
 
@@ -16,9 +16,9 @@ Power=1     			# For informational use only. Keep below 99 for BrandMeister
 Latitude=0.0    		# if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
 Longitude=0.0    		# if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
 Height=0    			# if set, reported to DMR-Master, causes recognition as repeater in BrandMeister
-Location=Nowhere		
-Description=Multi-Mode Repeater 
-URL=mmdvm.com			
+Location=Nowhere
+Description=Multi-Mode Repeater
+URL=mmdvm.com
 
 
 [Log]
@@ -91,7 +91,7 @@ Enable=1			# Enable DMR network connection. Default is: 1
 Address=44.131.4.1
 Port=62031			# Port DMRMaster is listening on
 # Local=3350			# Local UDP port if needed else random
-Password=PASSWORD		# Access password of DMR Master	
+Password=PASSWORD		# Access password of DMR Master
 Slot1=1				# Enable Slot 1 Do not enable for DVMega. Default is: 1
 Slot2=1				# Enable Slot 2. Default is: 1
 Debug=0
@@ -126,6 +126,9 @@ Columns=16
 Pins=11,10,0,1,2,3
 # For Adafruit i2c HD44780
 # Pins=115,113,112,111,110,109
+
+# Device address for I2C
+I2CAddress=0x20
 
 # PWM backlight
 PWM=0
