--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -22,9 +22,16 @@ URL=mmdvm.com
 
 
 [Log]
-# Logging levels, 0=No logging
-DisplayLevel=1			# log to console. Default is: 0 
-FileLevel=1			# log to file. Default is: 0
+# Logging levels
+0 = No logging
+1 = Debug
+2 = Message
+3 = Info
+4 = Warning
+5 = Error
+6 = Fatal
+DisplayLevel=1			# log Debug to console. Default is: 0 
+FileLevel=1			# log Debug to file. Default is: 0
 FilePath=.
 FileRoot=MMDVM
 
