--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -5,7 +5,7 @@ Duplex=1			# Is this station Simplex or Duplex. DVMega is simplex. Default is: 1
 # ModeHang=10     		# Time to stay in mode after receiption. If set overrides RFModemHang and NetModemHang
 RFModeHang=10     		# Time to stay in mode after RF-receiption Default is: 10s
 NetModeHang=3     		# Time to stay in mode after Network-receiption Default is: 3s
-Display=None
+Display=None     	    # Contains the name of the display used
 Daemon=0			# Run in background
 
 
@@ -23,21 +23,22 @@ URL=mmdvm.com
 
 [Log]
 # Logging levels
-0 = No logging
-1 = Debug
-2 = Message
-3 = Info
-4 = Warning
-5 = Error
-6 = Fatal
+# 0 = No logging
+# 1 = Debug
+# 2 = Message
+# 3 = Info
+# 4 = Warning
+# 5 = Error
+# 6 = Fatal
 DisplayLevel=1			# log Debug to console. Default is: 0 
 FileLevel=1			# log Debug to file. Default is: 0
-FilePath=.
-FileRoot=MMDVM
+FilePath=.      # location, where the logfile is to be stored. "." means in actual working directory
+FileRoot=MMDVM  # Prefix of the logfile-name. In example: MMDVM-2016-12-31.log
+
 
 [CW Id]
 Enable=1			# Enable the CW Id
-Time=10				# How often to ID in minutes
+Time=10				# Time-interval for repeating CW-ID in minutes
 
 
 [Modem]
@@ -50,13 +51,26 @@ TXDelay=100			# Give the transmitter time to settle in ms. Default is: 100ms
 DMRDelay=0			# Compensate for delay in transmitter audio chain in ms . Usually DSP based. Default is: 0.0ms
 RXLevel=50			# Soft control for receive level. Not used by DVMega. Default is: 100%
 TXLevel=50			# Soft Control for transmit level. Not used by DVMega. Default is: 100% 
+# CWIdTXLevel=50  # You could also use this levels instead of the global TXLevel for controlling for each mode
+# D-StarTXLevel=50
+# DMRTXLevel=50
+# YSFTXLevel=50
+# P25TXLevel=50
 OscOffset=0			# Tweak the Due oscillator if not using the TCXO. Default is: 0ppm
+RSSIMultiplier=1
+RSSIOffset=10
 Debug=0
+
+
+[UMP]
+Enable=0
+# Port=\\.\COM4
+Port=/dev/ttyACM1
 
 
 [D-Star]
 Enable=1			# Enable D-Star repeater mode. Default is: 1
-Module=C
+Module=C      # Module used for D-Star (for example: G9BF-C
 SelfOnly=0			# If set, only own ID can operate. Default is: 0
 
 
@@ -64,10 +78,9 @@ SelfOnly=0			# If set, only own ID can operate. Default is: 0
 Enable=1			# Enable DMR repeater mode. Default is: 1
 Beacons=0     			# Enable transmission of DMR-Beacons, used for DMR-Roaming
 Id=123456			# DMR ID of this station
-ColorCode=1   			# Color Code to use for DMR repeater access. Default is: 2
+ColorCode=1   			# Color Code to use for DMR repeater access. Default is: 1
 SelfOnly=0    			# If set, only own ID can operate. Default is: 0
 # Prefixes=234,235    		# These prefixes are whitelisted for operation. Default is: 0
-LookupFile=/path/to/DMRIds.dat
 CallHang=3    			# Time to answer in same Talk Group. Default is: 3
 TXHang=4      			# Time that TX stays on transmission after DMR-over. Default is: 3
 #Blacklist=
@@ -79,10 +92,24 @@ TXHang=4      			# Time that TX stays on transmission after DMR-over. Default is
 #DstIdBlackListSlot2NET=	# comma separated list TGs to block on NET Slot2
 #DstIdWhiteListSlot1NET=	# comma separated list TGs to allow on NET Slot1 
 #DstIdWhiteListSlot2NET=	# comma separated list TGs to allow on NET Slot2
+TGRewriteSlot1=0
+TGRewriteSlot2=0
+BMAutoRewrite=0
+BMRewriteReflectorVoicePrompts=0
+DirectDial=0
+TargetTG=9
+#RewriteMapSlot1=
+#RewritemapSlot2=
 
 
 [System Fusion]
 Enable=1			# Enable Fusion repeater mode. Default is: 1
+RemoteGateway=0
+
+
+[P25]
+Enable=1
+NAC=293
 
 
 [D-Star Network]
@@ -97,8 +124,11 @@ Debug=0
 Enable=1			# Enable DMR network connection. Default is: 1
 Address=44.131.4.1
 Port=62031			# Port DMRMaster is listening on
+Jitter=300    # Sets the network buffer size in ms
 # Local=3350			# Local UDP port if needed else random
 Password=PASSWORD		# Access password of DMR Master
+# Options=    # For setting DMRplus-options, see https://github.com/g4klx/MMDVMHost/blob/master/DMRplus_startup_options.md
+RSSI=0        # RSSI-repoting enabled = 1, disabled = 0
 Slot1=1				# Enable Slot 1 Do not enable for DVMega. Default is: 1
 Slot2=1				# Enable Slot 2. Default is: 1
 Debug=0
@@ -120,6 +150,14 @@ GwyAddress=ysfreflector.dvswitch.org
 GwyPort=42000
 
 
+[P25 Network]
+Enable=1
+GatewayAddress=127.0.0.1
+GatewayPort=42020
+LocalPort=32010
+Debug=0
+
+
 [TFT Serial]
 Port=/dev/ttyAMA0
 Brightness=50
@@ -129,7 +167,7 @@ Brightness=50
 Rows=2
 Columns=16
 # rs, strb, d0, d1, d2, d3
-# For basic HD44780 displays
+# For basic HD44780 displays (4-bit connection)
 Pins=11,10,0,1,2,3
 # For Adafruit i2c HD44780
 # Pins=115,113,112,111,110,109
@@ -158,3 +196,12 @@ IdleBrightness=20
 Type=3
 Brightness=0
 Invert=0
+
+
+[LCDproc]
+Address=localhost
+Port=13666
+#LocalPort=13667
+DimOnIdle=0
+DisplayClock=1
+UTC=0
