--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -5,7 +5,7 @@ Duplex=1			# Is this station Simplex or Duplex. DVMega is simplex. Default is: 1
 # ModeHang=10     		# Time to stay in mode after receiption. If set overrides RFModemHang and NetModemHang
 RFModeHang=10     		# Time to stay in mode after RF-receiption Default is: 10s
 NetModeHang=3     		# Time to stay in mode after Network-receiption Default is: 3s
-Display=None     	    # Contains the name of the display used
+Display=None			# Contains the name of the display used
 Daemon=0			# Run in background
 
 
@@ -32,8 +32,8 @@ URL=mmdvm.com
 # 6 = Fatal
 DisplayLevel=1			# log Debug to console. Default is: 0 
 FileLevel=1			# log Debug to file. Default is: 0
-FilePath=.      # location, where the logfile is to be stored. "." means in actual working directory
-FileRoot=MMDVM  # Prefix of the logfile-name. In example: MMDVM-2016-12-31.log
+FilePath=.			# location, where the logfile is to be stored. "." means in current working directory
+FileRoot=MMDVM			# Prefix of the logfile-name. In example: MMDVM-2016-12-31.log
 
 
 [CW Id]
@@ -51,7 +51,7 @@ TXDelay=100			# Give the transmitter time to settle in ms. Default is: 100ms
 DMRDelay=0			# Compensate for delay in transmitter audio chain in ms . Usually DSP based. Default is: 0.0ms
 RXLevel=50			# Soft control for receive level. Not used by DVMega. Default is: 100%
 TXLevel=50			# Soft Control for transmit level. Not used by DVMega. Default is: 100% 
-# CWIdTXLevel=50  # You could also use this levels instead of the global TXLevel for controlling for each mode
+# CWIdTXLevel=50		# You could also use this levels instead of the global TXLevel for controlling for each mode
 # D-StarTXLevel=50
 # DMRTXLevel=50
 # YSFTXLevel=50
@@ -70,7 +70,7 @@ Port=/dev/ttyACM1
 
 [D-Star]
 Enable=1			# Enable D-Star repeater mode. Default is: 1
-Module=C      # Module used for D-Star (for example: G9BF-C
+Module=C			# Module used for D-Star (for example: G9BF-C
 SelfOnly=0			# If set, only own ID can operate. Default is: 0
 
 
@@ -92,12 +92,12 @@ TXHang=4      			# Time that TX stays on transmission after DMR-over. Default is
 #DstIdBlackListSlot2NET=	# comma separated list TGs to block on NET Slot2
 #DstIdWhiteListSlot1NET=	# comma separated list TGs to allow on NET Slot1 
 #DstIdWhiteListSlot2NET=	# comma separated list TGs to allow on NET Slot2
-TGRewriteSlot1=0
-TGRewriteSlot2=0
-BMAutoRewrite=0
-BMRewriteReflectorVoicePrompts=0
-DirectDial=0
-TargetTG=9
+#TGRewriteSlot1=0
+#TGRewriteSlot2=0
+#BMAutoRewrite=0
+#BMRewriteReflectorVoicePrompts=0
+#DirectDial=0
+#TargetTG=9
 #RewriteMapSlot1=
 #RewritemapSlot2=
 
@@ -124,11 +124,11 @@ Debug=0
 Enable=1			# Enable DMR network connection. Default is: 1
 Address=44.131.4.1
 Port=62031			# Port DMRMaster is listening on
-Jitter=300    # Sets the network buffer size in ms
+Jitter=300			# Sets the network buffer size in ms
 # Local=3350			# Local UDP port if needed else random
 Password=PASSWORD		# Access password of DMR Master
-# Options=    # For setting DMRplus-options, see https://github.com/g4klx/MMDVMHost/blob/master/DMRplus_startup_options.md
-RSSI=0        # RSSI-repoting enabled = 1, disabled = 0
+# Options=			# For setting DMRplus-options, see https://github.com/g4klx/MMDVMHost/blob/master/DMRplus_startup_options.md
+RSSI=0				# RSSI-repoting enabled = 1, disabled = 0
 Slot1=1				# Enable Slot 1 Do not enable for DVMega. Default is: 1
 Slot2=1				# Enable Slot 2. Default is: 1
 Debug=0
