--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -5,7 +5,7 @@ Duplex=1			# Is this station Simplex or Duplex. DVMega is simplex. Default is: 1
 # ModeHang=10     		# Time to stay in mode after receiption. If set overrides RFModemHang and NetModemHang
 RFModeHang=10     		# Time to stay in mode after RF-receiption Default is: 10s
 NetModeHang=3     		# Time to stay in mode after Network-receiption Default is: 3s
-Display=None			# Contains the name of the display used
+Display=None			# Contains the name of the display section used
 Daemon=0			# Run in background
 
 
