--- a/mmdvm.service
+++ b/mmdvm.service
@@ -23,6 +23,8 @@ ExecReload=/bin/kill -HUP $MAINPID
 KillMode=process
 
 [Install]
+# To make the network-online.target available
+# systemctl enable systemd-networkd-wait-online.service
 WantedBy=network-online.target
 
 
