--- a/systemd/mmdvmhost.service
+++ b/systemd/mmdvmhost.service
@@ -1,25 +1,27 @@
 [Unit]
-Description=MMDVMHost Service
+Description=MMDVM Host Service
 # Description=Place this file in /lib/systemd/system
-# Description=N4IRS 10/19/2016 
-# The device name should point to the 
+# Description=N4IRS 04/20/2018
+
+# The device name should point to the
 # port the mmdvm is plugged into.
 # For USB ports (Arduino Due)
-BindTo=dev-ttyACM0.device
-After=dev-ttyACM0.device network-online.target netcheck.service
-
-[Service]
-Type=simple
-Restart=always
-RestartSec=3
-StandardOutput=null
-WorkingDirectory=/opt/MMDVMHost
-ExecStart=/opt/MMDVMHost/MMDVMHost /opt/MMDVMHost/MMDVM.ini
-ExecReload=/bin/kill -HUP $MAINPID
-KillMode=process
-
-[Install]
+# BindTo=dev-ttyACM0.device
+#
 # To make the network-online.target available
 # systemctl enable systemd-networkd-wait-online.service
-WantedBy=network-online.target
 
+BindTo=dev-ttyS2.device
+
+After=network-online.target syslog.target netcheck.service
+Wants=network-online.target
+
+[Service]
+StandardOutput=null
+WorkingDirectory=/opt/MMDVMHost
+RestartSec=3
+ExecStart=/opt/MMDVMHost/MMDVMHost /opt/MMDVMHost/MMDVM.ini
+Restart=on-abort
+
+[Install]
+WantedBy=multi-user.target
