--- a/systemd/p25parrot.service
+++ b/systemd/p25parrot.service
@@ -1,21 +1,28 @@
 [Unit]
-Description=P25Parrot Service
+Description=P25 Parrot Service
 # Description=Place this file in /lib/systemd/system
-# Description=N4IRS 10/19/2016 
-After=network-online.target netcheck.service
+# Description=N4IRS 04/20/2018
+
+# The device name should point to the
+# port the mmdvm is plugged into.
+# For USB ports (Arduino Due)
+# BindTo=dev-ttyACM0.device
+#
+# To make the network-online.target available
+# systemctl enable systemd-networkd-wait-online.service
+
+After=network-online.target syslog.target netcheck.service
+Wants=network-online.target
 
 [Service]
 Type=simple
 Restart=always
 RestartSec=3
 StandardOutput=null
-WorkingDirectory=/opt/P25Clients/P25Parrot
-ExecStart=/opt/P25Clients/P25Parrot/P25Parrot 42011
+WorkingDirectory=/opt/P25Parrot
+ExecStart=/opt/P25Parrot/P25Parrot 42011
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=process
 
 [Install]
-# To make the network-online.target available
-# systemctl enable systemd-networkd-wait-online.service
-WantedBy=network-online.target
-
+WantedBy=multi-user.target
