--- a/MMDVM.ini
+++ b/MMDVM.ini
@@ -1,3 +1,5 @@
+# This is OLD ! Use for reference ONLY. Will be updated
+
 [General]
 Callsign=G9BF
 Timeout=180			# Transmitter timeout in seconds. Default is: 120s
